--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             building things that are smart, smooth, and user-friendly.
           </p>
 
-          <img src="images/gradient1.png" alt="" class="background-img" />
+          <img src="gradient1.png" alt="" class="background-img" />
 
           <div class="model-box">
             <!-- <spline-viewer
@@ -162,7 +162,7 @@
             <i class="devicon-git-plain colored" style="font-size: 50px"></i>
           </div>
 
-          <img src="images/gradient 2.png" alt="" class="background-img" />
+          <img src="gradient2.png" alt="" class="background-img" />
           <!-- <img src="images/skills group.png" alt="" class="skills-group"> -->
         </div>
 
@@ -183,7 +183,7 @@
             ></i>
           </p>
 
-          <img src="images/gradient3&4.png" alt="" class="background-img" />
+          <img src="gradient3&4.png" alt="" class="background-img" />
         </div>
 
         <div class="card passion" data-aos="fade-up" data-aos-duration="1500">
@@ -199,7 +199,7 @@
             <i class="devicon-python-plain colored" style="font-size: 50px"></i>
           </p>
 
-          <img src="images/gradient3&4.png" alt="" class="background-img" />
+          <img src="gradient3&4.png" alt="" class="background-img" />
         </div>
       </div>
     </section>
@@ -349,7 +349,7 @@
 
       <div class="timeline">
         <div class="container left-container">
-          <img src="images/marwari-college.jpg" alt="company1" />
+          <img src="marwari-college.jpg" alt="company1" />
           <div class="text-box">
             <h2>Higher Secondary Education</h2>
             <small>2023-2025</small>
@@ -362,7 +362,7 @@
         </div>
 
         <div class="container right-container">
-          <img src="images/avs-engg-college.jpg" alt="company2" />
+          <img src="avs-engg-college.jpg" alt="company2" />
           <div class="text-box">
             <h2>Bachelor Of Engineering</h2>
             <small>2025-2029</small>
@@ -474,13 +474,13 @@
           <div class="info-card-content">
             <h3>Send Message</h3>
 
-            <form id="contactForm">
+            <form id="contactForm" action="https://formsubmit.co/el/civafu" method="POST">
               <div class="form-group">
                 <input
                   type="text"
                   id="name"
                   name="name"
-                  placeholder="Your name"
+                  placeholder="Your Name"
                   required
                   class="form-control"
                 />
@@ -502,7 +502,7 @@
                   type="text"
                   id="subject"
                   name="subject"
-                  placeholder="subject"
+                  placeholder="Subject"
                   required
                   class="form-control"
                 />
